done upto donate button

--- a/donate-today/index.html
+++ b/donate-today/index.html
@@ -23,6 +23,46 @@
 
 
     <!--banner part end-->
+    <!--middle-part from donate today to donate now button start-->
+    <section class="middle-content">
+        <div>
+            <h1>
+                Donate today
+            </h1>
+            <p>
+                We Work to Protect Women, Girls, Trans & Intersex People Rights. Join Our Mission Today! Your
+                Monthly<br>
+                Gift Today Will Make a Difference. Thank you
+            </p>
+        </div>
+    </section>
+    <section class="donation-amount">
+        <div class="donation-amount-design">
+            <h2>100tk</h2>
+        </div>
+        <div class="donation-amount-design-default">
+            <h2>200tk</h2>
+        </div>
+        <div class="donation-amount-design">
+            <h2>500tk</h2>
+        </div>
+        <div class="donation-amount-design">
+            <h2>1000tk</h2>
+        </div>
+        <div class="donation-amount-design">
+            <h2>5000tk</h2>
+        </div>
+    </section>
+    <section class="donation-other-amount">
+        <div>
+            <p class="set-opacity">Other amount (taka)</p>
+            <hr>
+            <p id="button-donate">Donate Now</p>
+        </div>
+    </section>
+
+    <!--middle-part from donate today to donate now button end-->
+
 </body>
 
 </html>
