--- a/donate-today/index.html
+++ b/donate-today/index.html
@@ -62,6 +62,59 @@
     </section>
 
     <!--middle-part from donate today to donate now button end-->
+    <!--Donate plan part start-->
+    <section class="content">
+        <div>
+            <h1>Our Donate Plan</h1>
+            <p>Mama Cash supports women, girls, and trans and intersex people who fight for their rights.<br> Activists
+                who tirelessly and fearlessly make their voices heard</p>
+        </div>
+    </section>
+    <!--three boxes of donation plan-->
+    <section class="donation-boxes">
+        <div class="donation-box-design1">
+            <img src="icons/food.png" alt="">
+            <h1>Food for a family</h1>
+            <p>Amet minim mollit non deserunt ullamco<br>
+                est sit aliqua dolor do amet sint.<br>
+                Velit officia consequat duis enim velit mollit.</p>
+
+        </div>
+        <div class="donation-box-design2">
+            <img src="icons/shelter.png" alt="">
+            <h1>Shelter for a family</h1>
+            <p>Amet minim mollit non deserunt ullamco<br>
+                est sit aliqua dolor do amet sint.<br>
+                Velit officia consequat duis enim velit mollit.</p>
+
+        </div>
+        <div class="donation-box-design3">
+            <img src="icons/Frame-1.png" alt="">
+            <h1>Education for a child</h1>
+            <p>Amet minim mollit non deserunt ullamco<br>
+                est sit aliqua dolor do amet sint.<br>
+                Velit officia consequat duis enim velit mollit.</p>
+
+        </div>
+
+    </section>
+    <!--Donate plan part end-->
+    <!--Bottom part start-->
+    <section class="content">
+        <div>
+            <h1>Get My Updates</h1>
+            <p>Please subscribe to our newsletter to get our update news<br>
+                All the latest news will be available then</p>
+        </div>
+    </section>
+    <section class="bottom-part">
+        <div class="bottom-input">
+            <p><input type="text" value="Email"></p>
+        </div>
+        <div class="bottom-button">
+            <p>Subscribe</p>
+        </div>
+    </section>
 
 </body>
 
