--- a/donate-today/index.html
+++ b/donate-today/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's donate</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -99,6 +103,31 @@
 
     </section>
     <!--Donate plan part end-->
+
+    <!--Part for bonus point start-->
+    <div class="content">
+        <h1>Our Recent Work</h1>
+    </div>
+    <section class="bonus-part-design">
+        <div class="bonus-image-1">
+            <img src="images/donation5.jpg" alt="no image available">
+            <p>Beginning in May 2022,Sylhet got flood which causes<br>
+                20 people death and finalcial loss of about 3 million <br>
+                dollers.
+            </p>
+            <p class="button">Explore More</p>
+        </div>
+        <div class="bonus-image-2">
+            <img src="images/donation10.jpg" alt="no image available">
+            <p>Beginning in May 2022,Sylhet got flood which causes<br>
+                20 people death and finalcial loss of about 3 million <br>
+                dollers.
+            </p>
+            <p class="button">Explore More</p>
+
+        </div>
+    </section>
+    <!--Part for bonus point end-->
     <!--Bottom part start-->
     <section class="content">
         <div>
@@ -111,10 +140,16 @@
         <div class="bottom-input">
             <p><input type="text" value="Email"></p>
         </div>
-        <div class="bottom-button">
+        <div class="button">
             <p>Subscribe</p>
         </div>
     </section>
+    <footer>
+        <div>
+            <h1>Be Humble</h1>
+            <p>I am gonna do it</p>
+        </div>
+    </footer>
 
 </body>
 
