final push for assignment 1

--- a/donate-today/index.html
+++ b/donate-today/index.html
@@ -14,9 +14,10 @@
 </head>
 
 <body>
+
     <!--banner part start-->
     <section class="banner-design">
-        <div class="banner-content">
+        <div>
             <h1>Let's help those peeople who are more in need</h1>
             <p>We are a non profitable organization<br>
                 and we donate the people who are more in need.
@@ -24,11 +25,9 @@
             <p id="button">Donate now</p>
         </div>
     </section>
-
-
     <!--banner part end-->
     <!--middle-part from donate today to donate now button start-->
-    <section class="middle-content">
+    <section class="content">
         <div>
             <h1>
                 Donate today
@@ -57,7 +56,7 @@
             <h2>5000tk</h2>
         </div>
     </section>
-    <section class="donation-other-amount">
+    <section class="content">
         <div>
             <p class="set-opacity">Other amount (taka)</p>
             <hr>
@@ -66,6 +65,7 @@
     </section>
 
     <!--middle-part from donate today to donate now button end-->
+
     <!--Donate plan part start-->
     <section class="content">
         <div>
@@ -74,7 +74,7 @@
                 who tirelessly and fearlessly make their voices heard</p>
         </div>
     </section>
-    <!--three boxes of donation plan-->
+    <!--three boxes of donation plan start-->
     <section class="donation-boxes">
         <div class="donation-box-design1">
             <img src="icons/food.png" alt="">
@@ -144,6 +144,8 @@
             <p>Subscribe</p>
         </div>
     </section>
+    <!--Bottom part end-->
+
     <footer>
         <div>
             <h1>Be Humble</h1>
